render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_closed_path_with_dotted_inner_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100" height="80" viewBox="0 0 100 80">
	<path fill="blue" d="M100 0L0 0L0 80L100 80L100 0ZM8 9C7.9999995 8.6984472 7.9830036 8.3978548 7.9490118 8.0982246C7.9150205 7.798594 7.8642497 7.5018344 7.7967005 7.2079453C7.7291503 6.9140558 7.6452518 6.6249099 7.5450044 6.3405075C7.4447575 6.0561056 7.3288012 5.7782602 7.197135 5.5069714C7.5708513 5.9007683 7.9804101 6.2528749 8.4258118 6.5632911C8.871213 6.8737073 9.3433218 7.136066 9.8421364 7.3503666C10.34095 7.5646667 10.856239 7.7265139 11.388003 7.8359084C11.919767 7.9453025 12.4571 7.9999995 13 8C13.635264 8 14.261642 7.9253907 14.879131 7.7761726C15.496623 7.6269546 16.08795 7.4073019 16.653114 7.1172156C17.218279 6.8271294 17.741468 6.4747248 18.222679 6.0600019C18.703894 5.6452789 19.129667 5.1798415 19.5 4.6636891C19.870335 5.1798415 20.296108 5.6452789 20.777321 6.0600019C21.258533 6.4747248 21.781721 6.8271294 22.346886 7.1172161C22.91205 7.4073024 23.503378 7.6269546 24.120869 7.7761726C24.738359 7.9253907 25.364737 8 26 8C26.635263 8 27.261641 7.9253907 27.879131 7.7761726C28.496622 7.6269546 29.08795 7.4073019 29.653114 7.1172156C30.218279 6.8271294 30.741468 6.4747248 31.222679 6.0600019C31.703894 5.6452789 32.129665 5.1798415 32.5 4.6636891C32.870335 5.1798415 33.296108 5.6452789 33.777321 6.0600019C34.258533 6.4747248 34.781719 6.8271294 35.346886 7.1172161C35.912052 7.4073024 36.50338 7.6269546 37.120872 7.7761726C37.738361 7.9253907 38.364735 8 39 8C39.635265 8 40.261642 7.9253907 40.879131 7.7761726C41.49662 7.6269546 42.087948 7.4073019 42.653114 7.1172156C43.218281 6.8271294 43.741467 6.4747248 44.222679 6.0600019C44.703892 5.6452789 45.129665 5.1798415 45.5 4.6636891C45.870335 5.1798415 46.296108 5.6452789 46.777321 6.0600019C47.258533 6.4747248 47.781719 6.8271294 48.346886 7.1172161C48.912052 7.4073024 49.50338 7.6269546 50.120869 7.7761726C50.738358 7.9253907 51.364735 8 52 8C52.635265 8 53.261642 7.9253907 53.879131 7.7761726C54.49662 7.6269546 55.087948 7.4073019 55.653114 7.1172156C56.218281 6.8271294 56.741467 6.4747248 57.222679 6.0600019C57.703892 5.6452789 58.129665 5.1798415 58.5 4.6636891C58.870335 5.1798415 59.296108 5.6452789 59.777321 6.0600019C60.258533 6.4747248 60.781719 6.8271294 61.346886 7.1172161C61.912052 7.4073024 62.50338 7.6269546 63.120872 7.7761726C63.738361 7.9253907 64.364738 8 65 8C65.635262 8 66.261642 7.9253907 66.879135 7.7761726C67.496628 7.6269546 68.087959 7.4073019 68.653122 7.1172156C69.218285 6.8271294 69.741478 6.4747248 70.222687 6.0600019C70.703896 5.6452789 71.129669 5.1798415 71.5 4.6636891C71.870338 5.1798415 72.296112 5.6452789 72.777328 6.0600019C73.258537 6.4747248 73.781731 6.8271294 74.346893 7.1172161C74.912056 7.4073024 75.503387 7.6269546 76.120872 7.7761726C76.738358 7.9253907 77.364738 8 78 8C78.635262 8 79.261642 7.9253907 79.879135 7.7761726C80.496628 7.6269546 81.087959 7.4073019 81.653122 7.1172156C82.218285 6.8271294 82.741478 6.4747248 83.222687 6.0600019C83.703896 5.6452789 84.129669 5.1798415 84.5 4.6636891C84.870338 5.1798415 85.296112 5.6452789 85.777328 6.0600019C86.258537 6.4747248 86.781723 6.8271294 87.346886 7.1172161C87.912048 7.4073024 88.50338 7.6269546 89.120865 7.7761726C89.738358 7.9253907 90.364738 8 91 8C91.163292 7.9999995 91.326431 7.9950047 91.489418 7.9850144C91.652405 7.9750242 91.814941 7.9600577 91.977013 7.9401155C92.139084 7.9201727 92.300392 7.8952909 92.460938 7.8654709C92.621483 7.83565 92.780968 7.8009467 92.939392 7.7613606C93.083405 8.0316925 93.242416 8.2928925 93.416428 8.54496C93.590446 8.7970266 93.77832 9.0383043 93.980049 9.2687931C94.181778 9.4992809 94.396034 9.7174635 94.622818 9.9233418C94.849602 10.12922 95.087433 10.321439 95.336311 10.5C94.82016 10.870335 94.354729 11.296108 93.94001 11.777321C93.525284 12.258533 93.172882 12.781722 92.88279 13.346886C92.592705 13.912049 92.373055 14.503377 92.223831 15.120867C92.074608 15.738358 92 16.364737 92 17C92 17.635263 92.074608 18.261641 92.223831 18.879131C92.373055 19.496622 92.592705 20.08795 92.88279 20.653114C93.172882 21.218279 93.525284 21.741468 93.940002 22.222681C94.354729 22.703894 94.82016 23.129667 95.336311 23.5C94.82016 23.870335 94.354729 24.296108 93.94001 24.777321C93.525284 25.258535 93.172882 25.781723 92.88279 26.346886C92.592705 26.91205 92.373055 27.503378 92.223831 28.120869C92.074608 28.738359 92 29.364737 92 30C92 30.635263 92.074608 31.261641 92.223831 31.879131C92.373055 32.49662 92.592705 33.087948 92.88279 33.653114C93.172882 34.218281 93.525284 34.741467 93.940002 35.222679C94.354729 35.703892 94.82016 36.129665 95.336311 36.5C94.82016 36.870335 94.354729 37.296112 93.94001 37.777325C93.525284 38.258537 93.172882 38.781727 92.88279 39.346889C92.592705 39.912052 92.373055 40.50338 92.223831 41.120872C92.074608 41.738361 92 42.364735 92 43C92 43.635265 92.074608 44.261642 92.223831 44.879131C92.373055 45.49662 92.592705 46.087948 92.88279 46.653114C93.172882 47.218281 93.525284 47.741467 93.940002 48.222679C94.354729 48.703892 94.82016 49.129665 95.336311 49.5C94.82016 49.870335 94.354729 50.296108 93.94001 50.777321C93.525284 51.258533 93.172882 51.781723 92.88279 52.346886C92.592705 52.912052 92.373055 53.50338 92.223831 54.120869C92.074608 54.738358 92 55.364735 92 56C92 56.635265 92.074608 57.261642 92.223831 57.879131C92.373055 58.49662 92.592705 59.087948 92.88279 59.653114C93.172882 60.218281 93.525284 60.741467 93.940002 61.222679C94.354729 61.703892 94.82016 62.129665 95.336311 62.5C94.82016 62.870335 94.354729 63.296108 93.94001 63.777321C93.525284 64.25853 93.172882 64.781723 92.88279 65.346886C92.592705 65.912048 92.373055 66.50338 92.223831 67.120865C92.074608 67.738358 92 68.364738 92 69C92 69.396614 92.029327 69.791046 92.08799 70.183296C92.146652 70.575546 92.234001 70.961296 92.350037 71.340553C92.466072 71.71981 92.60952 72.088402 92.78038 72.44632C92.951241 72.804245 93.147629 73.147568 93.369545 73.47628C93.189407 73.604141 93.014862 73.739235 92.845917 73.881546C92.676971 74.023872 92.514198 74.172928 92.357605 74.328728C92.200996 74.484528 92.051109 74.646538 91.907936 74.814758C91.764755 74.982979 91.628777 75.15683 91.5 75.336311C91.129669 74.82016 90.703896 74.354729 90.222679 73.940002C89.74147 73.525276 89.218277 73.172874 88.653114 72.882782C88.087952 72.592697 87.496628 72.373047 86.879135 72.223831C86.261642 72.074608 85.635262 72 85 72C84.364738 72 83.738358 72.074608 83.120865 72.223831C82.503372 72.373055 81.912048 72.592705 81.346886 72.88279C80.781723 73.172874 80.25853 73.525276 79.777321 73.940002C79.296104 74.354729 78.870331 74.82016 78.5 75.336311C78.129669 74.82016 77.703896 74.354729 77.222687 73.940002C76.741478 73.525276 76.218285 73.172874 75.653122 72.882782C75.087959 72.592697 74.496628 72.373047 73.879135 72.223831C73.261642 72.074608 72.635262 72 72 72C71.364738 72 70.738358 72.074608 70.120872 72.223831C69.503387 72.373055 68.912056 72.592705 68.346893 72.88279C67.781731 73.172874 67.258537 73.525276 66.777321 73.940002C66.296104 74.354729 65.870331 74.82016 65.5 75.336311C65.129662 74.82016 64.703888 74.354729 64.222679 73.940002C63.741467 73.525276 63.218281 73.172874 62.653114 72.882782C62.087948 72.592697 61.496624 72.373047 60.879135 72.223831C60.261642 72.074608 59.635265 72 59 72C58.364735 72 57.738358 72.074608 57.120865 72.223831C56.503376 72.373055 55.912052 72.592705 55.346889 72.88279C54.781723 73.172874 54.258537 73.525276 53.777325 73.939995C53.296112 74.354721 52.870335 74.82016 52.5 75.336311C52.129665 74.82016 51.703892 74.354721 51.222679 73.940002C50.741467 73.525276 50.218281 73.172874 49.653114 72.88279C49.087948 72.592705 48.49662 72.373055 47.879131 72.223831C47.261639 72.074608 46.635262 72 45.999996 72C45.364735 72 44.738358 72.074608 44.120869 72.223831C43.50338 72.373055 42.912052 72.592705 42.346886 72.88279C41.781719 73.172882 41.25853 73.525284 40.777317 73.940002C40.296104 74.354729 39.870335 74.82016 39.5 75.336311C39.129665 74.82016 38.703892 74.354729 38.222679 73.94001C37.741467 73.525291 37.218281 73.17289 36.653114 72.882797C36.087948 72.592705 35.496624 72.373055 34.879135 72.223831C34.261642 72.074608 33.635265 72 33 72C32.364735 72 31.738359 72.074608 31.120869 72.223831C30.503378 72.373055 29.912052 72.592705 29.346888 72.88279C28.781723 73.172874 28.258535 73.525276 27.777321 73.940002C27.296108 74.354729 26.870335 74.82016 26.5 75.336311C26.129667 74.82016 25.703894 74.354729 25.222679 73.940002C24.741467 73.525276 24.218279 73.172874 23.653114 72.882782C23.08795 72.592697 22.496622 72.373047 21.879131 72.223831C21.261641 72.074608 20.635263 72 20 72C19.364737 72 18.738359 72.074608 18.120869 72.223831C17.503378 72.373055 16.91205 72.592705 16.346886 72.88279C15.781722 73.172874 15.258533 73.525276 14.777321 73.940002C14.296108 74.354729 13.870335 74.82016 13.5 75.336311C13.166874 74.872009 12.788346 74.448273 12.364417 74.065094C11.940489 73.681915 11.480783 73.347992 10.985297 73.063324C10.489813 72.778656 9.9697971 72.549706 9.425251 72.376465C8.8807039 72.203239 8.323988 72.089653 7.7551012 72.035721C7.6401658 71.581947 7.4865861 71.141655 7.294363 70.714844C7.1021404 70.288033 6.8742127 69.881226 6.61058 69.494423C6.3469467 69.10762 6.0516396 68.746735 5.7246585 68.411774C5.3976769 68.076805 5.0440207 67.772881 4.6636891 67.5C5.1798415 67.129669 5.6452789 66.703896 6.0600019 66.222687C6.4747248 65.741478 6.8271294 65.218285 7.1172161 64.653122C7.4073024 64.087959 7.6269546 63.496632 7.7761726 62.879139C7.9253907 62.261646 8 61.635265 8 61C8 60.364735 7.9253907 59.738358 7.7761726 59.120869C7.6269546 58.50338 7.4073019 57.912052 7.1172156 57.346889C6.8271294 56.781727 6.4747248 56.258537 6.0600019 55.777321C5.6452789 55.296108 5.1798415 54.870335 4.6636891 54.5C5.1798415 54.129665 5.6452789 53.703892 6.0600019 53.222679C6.4747248 52.741467 6.8271294 52.218281 7.1172161 51.653118C7.4073024 51.087952 7.6269546 50.496624 7.7761726 49.879135C7.9253907 49.261642 8 48.635265 8 48C8 47.364735 7.9253907 46.738361 7.7761726 46.120872C7.6269546 45.50338 7.4073019 44.912052 7.1172156 44.346886C6.8271294 43.781719 6.4747248 43.258533 6.0600019 42.777321C5.6452789 42.296108 5.1798415 41.870335 4.6636891 41.5C5.1798415 41.129665 5.6452789 40.703892 6.0600019 40.222679C6.4747248 39.741467 6.8271294 39.218281 7.1172161 38.653114C7.4073024 38.087948 7.6269546 37.49662 7.7761726 36.879131C7.9253907 36.261642 8 35.635265 8 35C8 34.364735 7.9253907 33.738358 7.7761726 33.120869C7.6269546 32.50338 7.4073019 31.912052 7.1172156 31.346888C6.8271294 30.781723 6.4747248 30.258535 6.0600019 29.777323C5.6452789 29.296108 5.1798415 28.870335 4.6636891 28.5C5.1798415 28.129667 5.6452789 27.703894 6.0600019 27.222681C6.4747248 26.741468 6.8271294 26.218279 7.1172161 25.653114C7.4073024 25.08795 7.6269546 24.496622 7.7761726 23.879131C7.9253907 23.261641 8 22.635263 8 22C8 21.364737 7.9253907 20.738359 7.7761726 20.120869C7.6269546 19.503378 7.4073019 18.91205 7.1172156 18.346886C6.8271294 17.781721 6.4747248 17.258533 6.0600019 16.777321C5.6452789 16.296108 5.1798415 15.870335 4.6636891 15.5C5.1798415 15.129666 5.6452789 14.703894 6.0600019 14.222681C6.4747248 13.741467 6.8271294 13.218279 7.1172161 12.653114C7.4073024 12.087951 7.6269546 11.496623 7.7761726 10.879133C7.9253907 10.261642 8 9.6352644 8 9Z" fill-rule="evenodd"/>
</svg>
