render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_closed_path_with_dotted_outer_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="132" height="112" viewBox="0 0 132 112">
	<path fill="green" transform="translate(16 16)" d="M-8 0C-7.9999995 0.39901286 -7.9703135 0.79580474 -7.9109411 1.1903758C-7.8515692 1.5849469 -7.7631721 1.9729043 -7.6457505 2.3542485C-7.5283289 2.7355926 -7.3831887 3.1060781 -7.210331 3.4657052C-7.0374737 3.8253322 -6.8388228 4.1700969 -6.6143785 4.5C-6.8388228 4.8299026 -7.0374737 5.1746674 -7.210331 5.5342941C-7.3831887 5.8939209 -7.5283289 6.2644067 -7.645751 6.645751C-7.7631726 7.0270948 -7.8515697 7.4150524 -7.9109411 7.8096237C-7.9703135 8.2041941 -7.9999995 8.6009865 -8 9C-8 9.6352644 -7.9253907 10.261642 -7.7761726 10.879133C-7.6269546 11.496623 -7.4073019 12.087951 -7.1172156 12.653114C-6.8271294 13.218279 -6.4747248 13.741467 -6.0600019 14.22268C-5.6452789 14.703894 -5.1798415 15.129666 -4.6636891 15.5C-5.1798415 15.870335 -5.6452789 16.296108 -6.0600019 16.777321C-6.4747248 17.258535 -6.8271294 17.781723 -7.1172161 18.346888C-7.4073024 18.912052 -7.6269546 19.503378 -7.7761726 20.120869C-7.9253907 20.738359 -8 21.364737 -8 22C-8 22.635263 -7.9253907 23.261641 -7.7761726 23.879131C-7.6269546 24.496622 -7.4073019 25.08795 -7.1172156 25.653114C-6.8271294 26.218279 -6.4747248 26.741468 -6.0600019 27.222681C-5.6452789 27.703894 -5.1798415 28.129667 -4.6636891 28.5C-5.1798415 28.870335 -5.6452789 29.296108 -6.0600019 29.777321C-6.4747248 30.258535 -6.8271294 30.781723 -7.1172161 31.346886C-7.4073024 31.91205 -7.6269546 32.50338 -7.7761726 33.120869C-7.9253907 33.738358 -8 34.364735 -8 35C-8 35.635265 -7.9253907 36.261642 -7.7761726 36.879131C-7.6269546 37.49662 -7.4073019 38.087948 -7.1172156 38.653114C-6.8271294 39.218281 -6.4747248 39.741467 -6.0600019 40.222679C-5.6452789 40.703892 -5.1798415 41.129665 -4.6636891 41.5C-5.1798415 41.870335 -5.6452789 42.296108 -6.0600019 42.777321C-6.4747248 43.258533 -6.8271294 43.781719 -7.1172161 44.346886C-7.4073024 44.912052 -7.6269546 45.503376 -7.7761726 46.120865C-7.9253907 46.738358 -8 47.364735 -8 48C-8 48.635265 -7.9253907 49.261642 -7.7761726 49.879135C-7.6269546 50.496624 -7.4073019 51.087952 -7.1172156 51.653118C-6.8271294 52.218281 -6.4747248 52.741467 -6.0600019 53.222679C-5.6452789 53.703892 -5.1798415 54.129665 -4.6636891 54.5C-5.1798415 54.870335 -5.6452789 55.296108 -6.0600019 55.777321C-6.4747248 56.258533 -6.8271294 56.781723 -7.1172161 57.346886C-7.4073024 57.912052 -7.6269546 58.50338 -7.7761726 59.120869C-7.9253907 59.738358 -8 60.364735 -8 61C-8 61.635265 -7.9253907 62.261646 -7.7761726 62.879139C-7.6269546 63.496632 -7.4073019 64.087959 -7.1172156 64.653122C-6.8271294 65.218285 -6.4747248 65.741478 -6.0600019 66.222687C-5.6452789 66.703896 -5.1798415 67.129669 -4.6636891 67.5C-5.1798415 67.870338 -5.6452789 68.296112 -6.0600019 68.777321C-6.4747248 69.258537 -6.8271294 69.781723 -7.1172161 70.346886C-7.4073024 70.912048 -7.6269546 71.50338 -7.7761726 72.120872C-7.9253907 72.738358 -8 73.364738 -8 74C-7.9999995 74.995506 -7.8204379 75.957489 -7.4613142 76.885956C-7.1021905 77.81443 -6.587687 78.646866 -5.9178038 79.38327C-5.24792 80.119667 -4.4677634 80.710442 -3.5773342 81.155594C-2.6869049 81.600754 -1.7461606 81.870316 -0.75510108 81.964279C-0.53658915 82.826981 -0.18394312 83.630836 0.30283701 84.375839C0.78961718 85.120857 1.3841584 85.766655 2.0864606 86.313248C2.788763 86.859848 3.5607765 87.277618 4.4025016 87.566566C5.2442265 87.855522 6.1100593 88 7 88C7.6352644 88 8.2616415 87.925392 8.8791323 87.776169C9.496623 87.626953 10.087951 87.407303 10.653114 87.117218C11.218278 86.827133 11.741467 86.474731 12.222679 86.060005C12.703892 85.645279 13.129665 85.17984 13.5 84.663689C13.870335 85.17984 14.296108 85.645279 14.777321 86.060005C15.258533 86.474731 15.781722 86.827133 16.346886 87.117218C16.91205 87.407303 17.503376 87.626953 18.120867 87.776169C18.738358 87.925392 19.364737 88 20 88C20.635263 88 21.261641 87.925392 21.879131 87.776169C22.496622 87.626953 23.08795 87.407303 23.653114 87.117218C24.218279 86.827133 24.741467 86.474731 25.222679 86.060005C25.703894 85.645279 26.129667 85.17984 26.5 84.663689C26.870335 85.17984 27.296108 85.645279 27.777321 86.060005C28.258533 86.474731 28.781721 86.827133 29.346886 87.117218C29.91205 87.407303 30.503378 87.626953 31.120869 87.776169C31.738359 87.925392 32.364735 88 33 88C33.635265 88 34.261642 87.925392 34.879131 87.776169C35.49662 87.626953 36.087948 87.407303 36.653114 87.117218C37.218281 86.827133 37.741467 86.474731 38.222679 86.060005C38.703892 85.645279 39.129662 85.17984 39.499996 84.663689C39.870331 85.17984 40.296104 85.645279 40.777317 86.060005C41.25853 86.474731 41.781719 86.827133 42.346886 87.117218C42.912052 87.407303 43.50338 87.626953 44.120869 87.776169C44.738358 87.925392 45.364735 88 45.999996 88C46.635262 88 47.261639 87.925392 47.879128 87.776169C48.49662 87.626953 49.087948 87.407303 49.653114 87.117218C50.218281 86.827126 50.741467 86.474724 51.222679 86.059998C51.703892 85.645271 52.129662 85.17984 52.499996 84.663689C52.870331 85.17984 53.296104 85.645271 53.777321 86.059998C54.258533 86.474724 54.781723 86.827126 55.346889 87.117218C55.912052 87.407303 56.503376 87.626953 57.120865 87.776169C57.738358 87.925392 58.364735 88 59 88C59.635265 88 60.261642 87.925392 60.879135 87.776169C61.496624 87.626953 62.087948 87.407303 62.653114 87.117218C63.218281 86.827133 63.741467 86.474731 64.222679 86.060005C64.703888 85.645279 65.129662 85.17984 65.5 84.663689C65.870331 85.17984 66.296104 85.645279 66.777321 86.060005C67.258537 86.474731 67.781731 86.827133 68.346893 87.117218C68.912056 87.407303 69.503387 87.626953 70.120872 87.776169C70.738358 87.925392 71.364738 88 72 88C72.635262 88 73.261642 87.925392 73.879135 87.776169C74.496628 87.626953 75.087959 87.407303 75.653122 87.117218C76.218285 86.827133 76.741478 86.474731 77.222687 86.060005C77.703896 85.645279 78.129669 85.17984 78.5 84.663689C78.870331 85.17984 79.296104 85.645279 79.777321 86.060005C80.25853 86.474731 80.781723 86.827133 81.346886 87.117218C81.912048 87.407303 82.503372 87.626953 83.120865 87.776169C83.738358 87.925392 84.364738 88 85 88C85.635262 88 86.261642 87.925392 86.879135 87.776169C87.496628 87.626953 88.087959 87.407303 88.653122 87.117218C89.218285 86.827133 89.741478 86.474731 90.222687 86.060005C90.703896 85.645279 91.129669 85.17984 91.5 84.663689C91.870331 85.17984 92.296104 85.645279 92.777321 86.060005C93.25853 86.474731 93.781723 86.827133 94.346886 87.117218C94.912048 87.407303 95.503372 87.626953 96.120865 87.776169C96.738358 87.925392 97.364738 88 98 88C99.06086 87.999992 100.08135 87.797005 101.06146 87.391022C102.04157 86.985046 102.9067 86.40699 103.65685 85.656845C104.40699 84.9067 104.98505 84.041573 105.39102 83.061462C105.797 82.081352 105.99999 81.06086 106 80C106 79.603386 105.97066 79.208954 105.912 78.816704C105.85334 78.424454 105.76598 78.038704 105.64995 77.659439C105.53391 77.280174 105.39046 76.911583 105.21961 76.553665C105.04876 76.195747 104.85237 75.852432 104.63046 75.52372C105.15131 75.154037 105.62115 74.728081 106.03997 74.24585C106.4588 73.763618 106.81477 73.238762 107.10788 72.671272C107.40099 72.103783 107.62296 71.509712 107.77377 70.889061C107.92459 70.268402 108 69.638718 108 69C108 68.364738 107.92539 67.738358 107.77617 67.120872C107.62695 66.50338 107.4073 65.912048 107.11722 65.346886C106.82713 64.781723 106.47472 64.25853 106.06 63.777321C105.64528 63.296108 105.17984 62.870335 104.66369 62.5C105.17984 62.129665 105.64528 61.703892 106.06001 61.222679C106.47472 60.741467 106.82713 60.218281 107.11722 59.653114C107.4073 59.087948 107.62695 58.49662 107.77617 57.879131C107.92539 57.261642 108 56.635265 108 56C108 55.364735 107.92539 54.738358 107.77617 54.120869C107.62695 53.50338 107.4073 52.912052 107.11722 52.346886C106.82713 51.781723 106.47472 51.258533 106.06 50.777321C105.64528 50.296108 105.17984 49.870335 104.66369 49.5C105.17984 49.129665 105.64528 48.703892 106.06001 48.222679C106.47472 47.741467 106.82713 47.218281 107.11722 46.653118C107.4073 46.087952 107.62695 45.496624 107.77617 44.879135C107.92539 44.261642 108 43.635265 108 43C108 42.364735 107.92539 41.738358 107.77617 41.120869C107.62695 40.50338 107.4073 39.912052 107.11722 39.346889C106.82713 38.781727 106.47472 38.258537 106.06 37.777325C105.64528 37.296112 105.17984 36.870335 104.66369 36.5C105.17984 36.129665 105.64528 35.703892 106.06001 35.222679C106.47472 34.741467 106.82713 34.218281 107.11722 33.653114C107.4073 33.087948 107.62695 32.49662 107.77617 31.879131C107.92539 31.261641 108 30.635263 108 30C108 29.364737 107.92539 28.738359 107.77617 28.120869C107.62695 27.503378 107.4073 26.912052 107.11722 26.346888C106.82713 25.781723 106.47472 25.258535 106.06 24.777323C105.64528 24.296108 105.17984 23.870335 104.66369 23.5C105.17984 23.129667 105.64528 22.703894 106.06001 22.222681C106.47472 21.741468 106.82713 21.218279 107.11722 20.653114C107.4073 20.08795 107.62695 19.496622 107.77617 18.879131C107.92539 18.261641 108 17.635263 108 17C108 16.364737 107.92539 15.738358 107.77617 15.120867C107.62695 14.503377 107.4073 13.912049 107.11722 13.346886C106.82713 12.781722 106.47472 12.258533 106.06 11.777321C105.64528 11.296108 105.17984 10.870335 104.66369 10.5C105.17984 10.129666 105.64528 9.7038927 106.06001 9.2226801C106.47472 8.7414675 106.82713 8.2182789 107.11722 7.6531148C107.4073 7.0879507 107.62695 6.496623 107.77617 5.8791323C107.92539 5.2616415 108 4.6352639 108 4C107.99999 2.9391339 107.797 1.9186448 107.39102 0.93853247C106.98505 -0.041579783 106.40699 -0.9067086 105.65685 -1.6568542C104.9067 -2.4069996 104.04157 -2.9850602 103.06146 -3.391036C102.08135 -3.7970116 101.06086 -3.9999998 100 -4C99.8367 -3.9999998 99.673561 -3.9950049 99.510574 -3.9850149C99.34758 -3.9750249 99.185051 -3.9600585 99.02298 -3.9401159C98.860909 -3.9201732 98.699593 -3.8952916 98.539047 -3.8654709C98.378502 -3.8356504 98.219025 -3.800947 98.060608 -3.7613606C97.719597 -4.4014907 97.299301 -4.9844637 96.799728 -5.5102792C96.300156 -6.0360947 95.739449 -6.4856577 95.117599 -6.8589678C94.495743 -7.2322774 93.835335 -7.5157771 93.136383 -7.709466C92.437424 -7.9031553 91.725296 -8 91 -8C90.364738 -8 89.738358 -7.9253907 89.120872 -7.7761726C88.503387 -7.6269546 87.912056 -7.4073019 87.346893 -7.1172156C86.781731 -6.8271294 86.258537 -6.4747248 85.777321 -6.0600019C85.296112 -5.6452789 84.870338 -5.1798415 84.5 -4.6636891C84.129669 -5.1798415 83.703896 -5.6452789 83.222687 -6.0600019C82.741478 -6.4747248 82.218285 -6.8271294 81.653122 -7.1172161C81.087959 -7.4073024 80.496628 -7.6269546 79.879135 -7.7761726C79.261642 -7.9253907 78.635262 -8 78 -8C77.364738 -8 76.738358 -7.9253907 76.120872 -7.7761726C75.50338 -7.6269546 74.912048 -7.4073019 74.346886 -7.1172156C73.781723 -6.8271294 73.258537 -6.4747248 72.777328 -6.0600019C72.296112 -5.6452789 71.870338 -5.1798415 71.5 -4.6636891C71.129669 -5.1798415 70.703896 -5.6452789 70.222687 -6.0600019C69.741478 -6.4747248 69.218285 -6.8271294 68.653122 -7.1172161C68.087959 -7.4073024 67.496628 -7.6269546 66.879135 -7.7761726C66.261642 -7.9253907 65.635262 -8 65 -8C64.364738 -8 63.738361 -7.9253907 63.120872 -7.7761726C62.50338 -7.6269546 61.912052 -7.4073019 61.346889 -7.1172156C60.781727 -6.8271294 60.258537 -6.4747248 59.777321 -6.0600019C59.296108 -5.6452789 58.870335 -5.1798415 58.5 -4.6636891C58.129665 -5.1798415 57.703892 -5.6452789 57.222679 -6.0600019C56.741467 -6.4747248 56.218281 -6.8271294 55.653114 -7.1172161C55.087948 -7.4073024 54.496624 -7.6269546 53.879135 -7.7761726C53.261642 -7.9253907 52.635265 -8 52 -8C51.364735 -8 50.738358 -7.9253907 50.120869 -7.7761726C49.50338 -7.6269546 48.912052 -7.4073019 48.346886 -7.1172156C47.781719 -6.8271294 47.258533 -6.4747248 46.777321 -6.0600019C46.296108 -5.6452789 45.870335 -5.1798415 45.5 -4.6636891C45.129665 -5.1798415 44.703892 -5.6452789 44.222679 -6.0600019C43.741467 -6.4747248 43.218281 -6.8271294 42.653114 -7.1172161C42.087948 -7.4073024 41.49662 -7.6269546 40.879131 -7.7761726C40.261642 -7.9253907 39.635265 -8 39 -8C38.364735 -8 37.738358 -7.9253907 37.120869 -7.7761726C36.50338 -7.6269546 35.912052 -7.4073019 35.346886 -7.1172156C34.781719 -6.8271294 34.258533 -6.4747248 33.777321 -6.0600019C33.296108 -5.6452789 32.870335 -5.1798415 32.5 -4.6636891C32.129665 -5.1798415 31.703894 -5.6452789 31.222679 -6.0600019C30.741468 -6.4747248 30.218279 -6.8271294 29.653114 -7.1172161C29.08795 -7.4073024 28.496622 -7.6269546 27.879131 -7.7761726C27.261641 -7.9253907 26.635263 -8 26 -8C25.364737 -8 24.738359 -7.9253907 24.120869 -7.7761726C23.503378 -7.6269546 22.91205 -7.4073019 22.346886 -7.1172156C21.781721 -6.8271294 21.258533 -6.4747248 20.777321 -6.0600019C20.296108 -5.6452789 19.870335 -5.1798415 19.5 -4.6636891C19.129667 -5.1798415 18.703894 -5.6452789 18.222681 -6.0600019C17.741468 -6.4747248 17.218279 -6.8271294 16.653114 -7.1172161C16.08795 -7.4073024 15.496623 -7.6269546 14.879132 -7.7761726C14.261642 -7.9253907 13.635264 -8 13 -8C12.364736 -8 11.738358 -7.9253907 11.120868 -7.7761726C10.503377 -7.6269546 9.9120493 -7.4073019 9.3468857 -7.1172156C8.7817221 -6.8271294 8.2585335 -6.4747248 7.7773209 -6.0600019C7.2961078 -5.6452789 6.8703341 -5.1798415 6.5 -4.6636891C6.1296659 -5.1798415 5.7038922 -5.6452789 5.2226791 -6.0600019C4.7414665 -6.4747248 4.2182779 -6.8271294 3.6531141 -7.1172161C3.08795 -7.4073024 2.4966228 -7.6269546 1.8791323 -7.7761726C1.2616416 -7.9253907 0.63526428 -8 0 -8C-1.0608659 -7.9999995 -2.0813549 -7.7970109 -3.0614672 -7.3910351C-4.0415792 -6.9850593 -4.9067082 -6.4069991 -5.6568537 -5.6568537C-6.4069991 -4.9067082 -6.9850597 -4.0415792 -7.3910356 -3.0614672C-7.7970114 -2.0813549 -7.9999995 -1.0608659 -8 0ZM100 0L0 0L0 80L100 80L100 0Z" fill-rule="evenodd"/>
</svg>
